# counts3

./: .gitignore  README.md  counts.db  pyproject.toml  requirements.txt
scratch/: seed_dividas.py
src/: main.py
src/assetsmy/: schema.txt
src/database/: config.py  models.py
src/gears/: asaas_api.py  asaas_control.py  db_control.py
src/models/: db_models.py
src/views/: crud_registros.py  crud_user.py  dashboard.py  login.py  managment.py
