[project]
name = "counts3"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ronivaldo Silva", email = "Ronivaldo.alpha@gmail.com" }
]
dependencies = [
    "flet=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli=0.84.0",
    "flet-desktop=0.84.0",
    "flet-web=0.84.0",
]

[tool.flet]
org = "com.alphaformate"
product = "counts3"
company = "AlphaFormated"
copyright = "Copyright (C) 2026 by AlphaFormated"

[tool.flet.app]
path = "src"
module = "main.py"

[tool.flet.web]


[tool.flet.splash]
android = false
ios = false
web = true